# src/api/restaurant/dto/restaurant-filter.dto.ts
@@ -1,0 +1,8 @@
+import { CostType } from "../../../enums/cost-type.enum";
+
+export class RestaurantFiltersDto {
+    veg_only: boolean
+    cost: CostType
+    cusine_types: Array<string>
+    isOpen: boolean
+}
