# src/api/restaurant/restaurant.controller.ts
@@ -1,7 +1,9 @@
-import { Body, Delete, Get, Post, Route, Tags } from "tsoa";
+import { Body, Delete, Get, Post, Query, Route, Tags } from "tsoa";
 import { autoInjectable } from "tsyringe";
 import RestaurantService from "./restaurant.service";
 import { CreateRestaurantDto } from "./dto/create-restaurant.dto";
+import { RestaurantFiltersDto } from "./dto/restaurant-filter.dto";
+import { CostType } from "../../enums/cost-type.enum";
 
 @autoInjectable()
 @Route("/restaurant")
@@ -11,12 +13,18 @@ export default class RestaurantController {
 
     @Get("/details")
     public async getDetails() {
+        // console.log("query params: ", veg_only, cost, cusine_types, isOpen);
         return await this.restaurantService.details();
     }
 
     @Get("/details/:id")
     public async findOneById(id: string) {
         return await this.restaurantService.findOneById(id);
+    }
+
+    @Post("/filter")
+    public async filterRestaurant(@Body() restaurantFiltersDto: RestaurantFiltersDto) {
+        return await this.restaurantService.filterRestaurant(restaurantFiltersDto);
     }
 
     @Post("/create")
